core/roboconf-core/src/test/resources/configurations/invalid/component-self-imports.graph
A {
	installer: target;
	exports: port = 8081, ip;
	imports: A.port, A.ip; 
}
